# monday_client

./: .gitignore  README.md  pyproject.toml  test_sdk.ipynb
monday_client/: __init__.py  __main__.py  client.py  exceptions.py  fragments.py  utils.py
tests/: test_client.py
